--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 
 <html lang="en">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F98RDTQMF9"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-F98RDTQMF9');
+    </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title data-lang-key="title">EMPRESS Interactive Guide</title>
@@ -616,4 +627,5 @@
         });
     </script>
 </body>
+
 </html>
